--- a/index.html
+++ b/index.html
@@ -46,18 +46,18 @@
 また、専門学校に通いながら、小学校の学童で常動キッズコーチとしての
 アルバイトと並行して地下アイドルの運営事務所でアルバイトスタッフとして
 運営や事務所作業を中心に勤務中。</div>
-			<a href="file:///Users/nakagawaaibana/Downloads/portfolio_nakagawa/profile.html"><div class="about"><img src="img/ABOUT.gif" class="aa"></div></a>
+			<a href="file:///Users/nakagawaaibana/Downloads/portfolio_nakagawa/profile.html"><div class="about"><img src="ABOUT.gif" class="aa"></div></a>
 		</h1>
 		
 		<a name="skill"></a>
 		<h1><div class="title">SKILL</div>
 				<div class="image-grid">
-					<img src="img/skil_Ai.jpg" alt="Adobe Illustraror">
-					<img src="img/skil_Ps.jpg" alt="Adobe Photoshop">
-					<img src="img/skil_Dw.jpg" alt="Adobe Dreamweaver">
-    				<img src="img/skil_Pr.jpg" alt="Adobe Premiere pro">
-   					<img src="img/skil_X.jpg" alt="Word">
-					<img src="img/skil_w.jpg" alt="Excel">
+					<img src="skil_Ai.jpg" alt="Adobe Illustraror">
+					<img src="skil_Ps.jpg" alt="Adobe Photoshop">
+					<img src="skil_Dw.jpg" alt="Adobe Dreamweaver">
+    				<img src="skil_Pr.jpg" alt="Adobe Premiere pro">
+   					<img src="skil_X.jpg" alt="Word">
+					<img src="skil_w.jpg" alt="Excel">
   				</div>
 		</h1>	
 		
@@ -65,8 +65,8 @@
 		<a name="production"></a>
 		<h1><div class="title">PRODUCTION</div>
 			<div class="image-grid">
-					<img src="img/PR_toitsu.jpg" alt="宣伝画像">
-					<img src="img/Pr_il.jpg" alt="架空公演用フライヤー">
+					<img src="PR_toitsu.jpg" alt="宣伝画像">
+					<img src="Pr_il.jpg" alt="架空公演用フライヤー">
   			</div>
 		
 		</h1>
