--- a/profile.html
+++ b/profile.html
@@ -19,7 +19,7 @@
 		<p>自分の「好き」や「いいな」と感じる感覚を大切にしながら、派手さはなくても、しっかりと伝わるものを丁寧に形にしていきたいと考えています。<br>
 			あまり前に出るタイプではありませんが、ものづくりに対する思いは強く持っています。</p></div>
 	<div class="pl_img">	
-		<img src="img/pl_c.jpg">
+		<img src="pl_c.jpg">
 	</div>
 	</div>
 	
