--- a/profile.html
+++ b/profile.html
@@ -9,7 +9,7 @@
 <body>
 	
 	<div class="header">
-	<div class="home"><a href="file:///Users/nakagawaaibana/Desktop/portfolio_nakagawa/style.html">◀︎HOME</a></div>
+	<div class="home"><a href="index.html">◀︎HOME</a></div>
 	</div>
 	
 	
