--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 		<div class="menu">
 			<ul>
 				<a href="#home"><li>HOME</li></a>
-				<a href="file:///Users/nakagawaaibana/Downloads/portfolio_nakagawa/profile.html"><li>ABOUT</li></a>
+				<a href="profil.html"><li>ABOUT</li></a>
 				<a href="#skill"><li>SKILL</li></a>
 				<a href="#production"><li>PRODUCTION</li></a>
 			</ul>
@@ -46,7 +46,7 @@
 また、専門学校に通いながら、小学校の学童で常動キッズコーチとしての
 アルバイトと並行して地下アイドルの運営事務所でアルバイトスタッフとして
 運営や事務所作業を中心に勤務中。</div>
-			<a href="file:///Users/nakagawaaibana/Downloads/portfolio_nakagawa/profile.html"><div class="about"><img src="ABOUT.gif" class="aa"></div></a>
+			<a href="profile.html"><div class="about"><img src="ABOUT.gif" class="aa"></div></a>
 		</h1>
 		
 		<a name="skill"></a>
