--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 		<div class="menu">
 			<ul>
 				<a href="#home"><li>HOME</li></a>
-				<a href="profil.html"><li>ABOUT</li></a>
+				<a href="profile.html"><li>ABOUT</li></a>
 				<a href="#skill"><li>SKILL</li></a>
 				<a href="#production"><li>PRODUCTION</li></a>
 			</ul>
