--- a/profile.html
+++ b/profile.html
@@ -26,7 +26,7 @@
 	<div class="profile-grid">
 		<div class="block">
 			<h2>出身</h2>
-			<p>秋田</p>
+			<p>秋田県</p>
 		</div>
 		
 		<div class="block">
