--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
 「専門学校ESPエンタテインメント東京音楽芸能スタッフ科企画制作コース」に進学。<br>
 授業を通して、特にポスターやWeb，映像などを作る”クリエイティブな作業”に
 強く惹かれ、現在はAdobeソフトを使用して幅広く勉強中。<br>
-また、専門学校に通いながら、小学校の学童で常動キッズコーチとしての
-アルバイトと並行して地下アイドルの運営事務所でアルバイトスタッフとして
+また、専門学校に通いながら、小学校の学童で非常動キッズコーチとしての
+アルバイトと並行して、地下アイドルの運営事務所でアルバイトスタッフとして
 運営や事務所作業を中心に勤務中。</div>
 			<a href="profile.html"><div class="about"><img src="ABOUT.gif" class="aa"></div></a>
 		</h1>
